fix spacing

--- a/app/assets/stylesheets/tags.css.scss
+++ b/app/assets/stylesheets/tags.css.scss
@@ -1,5 +1,5 @@
 .tagContainer {
-  margin-bottom: 6px;
+  margin-top: 6px;
 }
 
 .tag {
